<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/berhasil"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/berhasilTitle"
            android:text="@string/gabung_tim"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"/>



        <TextView
            android:id="@+id/namaberhasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="140dp"
            android:gravity="center"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btnOke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/berhasilTitle" />

        <Button
            android:id="@+id/btnOke"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/brown"
            android:text="@string/oke"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namaberhasil" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>