<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".PeralatanDetail">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="Back Button"
            android:src="@drawable/baseline_arrow_back_black" />

        <TextView
            android:id="@+id/judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="30dp"
            android:text="Peralatan"
            android:textColor="@color/brown_700"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImageP"
                android:layout_width="match_parent"
                android:layout_height="324dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/detailImage"
                    android:layout_width="444dp"
                    android:layout_height="267dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/carier" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasCarrierTitle"
                android:textColor="@color/brown"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:id="@+id/detailName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peralatan_pribadi"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="23sp"
                android:id="@+id/detailPembawaan"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInfo"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp">


                <TextView
                    android:id="@+id/detailPengertian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/tasCarrierDesc"
                    android:textSize="19sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardTips"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/TipsMemilihPeralatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tips_memilih_peralatan"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailTips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/tipsTasCarrier"
                    android:textSize="19sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
